Update hive&hadoop.md